Review fixes for the input package across Cartesian Plane parts
Part 12 input package review: fix NPE risk on null exception messages
in EquationFileChooser, bind dialog escape key on the root pane so it
works regardless of focus, add missing null checks and Javadoc
corrections, and harden GUI tests with bounded joins and focus polling.
Includes earlier review fixes to Equation/Exp4jEquation/CommandProcessor
and Command javadoc updates in Parts 11 and 13-16.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>